agregando funcionamiento de correcto e incorrecto para keyup

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --gren: #00b755;
   --yellow: #daaf38;
+  --red: #ca4754;
   --black: #222;
   --gray: #999;
 }
@@ -55,6 +56,14 @@ letter {
     position: absolute;
     left: -70%;
     animation: 1s blink infinite ease-in-out;
+  }
+
+  &.correct {
+    color: var(--gren);
+  }
+
+  &.incorrect {
+    color: var(--red);
   }
 }
 
