--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
   padding: 32px;
   margin: 0 auto;
   justify-content: center;
-  margin-top: 32px;
+  align-items: center;
   padding: 16px;
+  height: 100dvh;
 }
 
 section {
@@ -25,7 +26,8 @@ section {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  max-width: 700px;
+  max-width: 1000px;
+  margin-bottom: 150px;
 }
 
 time {
@@ -44,7 +46,7 @@ input {
 p {
   display: flex;
   flex-wrap: wrap;
-  gap: 3px 15px;
+  gap: 10px 20px;
   margin: 0;
 }
 
